--- a/styles/style.css
+++ b/styles/style.css
@@ -145,6 +145,7 @@ button.take:active {
 }
 
 button.get {
+    padding: -20px;
     width: 114px;
     height: 40px;
     font-family: 'Work Sans';
@@ -173,6 +174,7 @@ button.get:active {
 }
 
 button.log {
+    margin: 20px;
     width: 75px;
     height: 40px;
     width: 41px;
